# beatsrss

./: Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: wps.yaml
src/: main.py
src/celery_app/: __init__.py  app.py
src/db/: engine.py  models.py
src/log/: __init__.py  app_logger.py
src/settings/: base.py
src/shared/parsing/: pages.py
src/tasks/: __init__.py  _telegram.py  tasks.py
