[tool.poetry]
name = "beatsrss"
version = "0.1.0"
description = ""
authors = ["evgenii.uvarov <evgenii.uvarov.post@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
feedparser = "^6.0.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.6"
python-telegram-bot = "^20.3"
pydantic = "^1.10.9"
psycopg = "^3.1.9"
celery = "^5.3.0"
sqlalchemy = "^2.0.15"
redis = "^4.5.5"
aiopg = "^1.4.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
